--- a/B2BApp.Web/Views/Home/Index.cshtml
+++ b/B2BApp.Web/Views/Home/Index.cshtml
@@ -59,7 +59,8 @@
         url: 'https://localhost/api/UrunSatisRapor',
         crossDomain: true,
         headers: {
-            'accept': 'text/plain'
+            'accept': 'text/plain',
+            'Authorization': "Bearer " + "@ViewBag.JwtCookie"
         },
         data: {
             'tedarikciId': "@ViewBag.FirmaId"
