--- a/B2BApp.Web/Views/Satis/SatisRapor.cshtml
+++ b/B2BApp.Web/Views/Satis/SatisRapor.cshtml
@@ -44,7 +44,8 @@
             url: 'https://localhost/api/Satis/GetAllWithUrunAndSubeByTedarikciId',
             crossDomain: true,
             headers: {
-                'accept': 'text/plain'
+                'accept': 'text/plain',
+                'Authorization': "Bearer " + "@ViewBag.JwtCookie"
             },
             data: {
                 'tedarikciId': '@ViewBag.FirmaId'
