--- a/B2BApp.Web/Views/Urun/UrunlerRapor.cshtml
+++ b/B2BApp.Web/Views/Urun/UrunlerRapor.cshtml
@@ -34,7 +34,8 @@
         url: 'https://localhost/api/Urun/GetUrunlerWithDetailsByTedarikciId',
         crossDomain: true,
         headers: {
-            'accept': 'text/plain'
+            'accept': 'text/plain',
+            'Authorization': "Bearer " + "@ViewBag.JwtCookie"
         },
         data: {
             'tedarikciId': '@ViewBag.FirmaId'
