--- a/B2BApp.Web/Views/Home/Index.cshtml
+++ b/B2BApp.Web/Views/Home/Index.cshtml
@@ -80,7 +80,7 @@
                         {
                             "extend": 'excelHtml5',
                             "exportOptions": {
-                                "columns": [0, 1, 2, 3],
+                                "columns": [0, 1, 2, 3, 4],
                                 "title": "bura başlık"
 
                             }
@@ -88,7 +88,7 @@
                         {
                             "extend": 'pdfHtml5',
                             "exportOptions": {
-                                "columns": [0, 1, 2, 3],
+                                "columns": [0, 1, 2, 3, 4],
                                 "title": "Bura Başlık",
                                 "text": "asdasdasd"
                             }
